request(nav-mobile.sass): covered up chat widget whenever the mobile menu is open. Also fixed menu being cut off on smaller devices - ticket( #24019)

--- a/src/components/Nav/Nav-Mobile/Nav-Mobile.sass
+++ b/src/components/Nav/Nav-Mobile/Nav-Mobile.sass
@@ -1,7 +1,7 @@
 .nav-mobile
   display: none
   position: fixed
-  z-index: 9989
+  z-index: 9989999999
   background: $c11
   width: 100%
   height: 5rem
@@ -55,7 +55,7 @@
     @extend .container-fluid
 
   &__link
-    margin: 2em auto
+    margin: 4vh auto
     text-align: center
 
   &__button
